tests/sources/valid/echo_int.minipl
var echo: int;
read echo;
print echo;