tests/sources/invalid/assign_to_nonvariable.minipl
var x: int := 1;
(a) := x;